--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starbucks</title>
     
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsivo.css">
-    <link rel="stylesheet" href="../css/resposivo_menu.css">
+    <link href="https://artursantana.github.io/Primeiro/style.css" rel="stylesheet" >
+    <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="resposivo_menu.css">
 </head>
 <body>
 
