--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Starbucks</title>
     
     <link href="https://artursantana.github.io/Primeiro/style.css" rel="stylesheet" >
-    <link rel="stylesheet" href="responsivo.css">
-    <link rel="stylesheet" href="resposivo_menu.css">
+    <link rel="stylesheet" href="https://artursantana.github.io/Primeiro/responsivo.css">
+    <link rel="stylesheet" href="https://artursantana.github.io/Primeiro/resposivo_menu.css">
 </head>
 <body>
 
