--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <section class="sobre">
 
         <div class="extras">
-            <img src="../midia_photos/cafe1.png" alt="">
+            <img src="cafe1.png" alt="">
         </div ><!--extras-->
 
         <div class="social-midia">
-            <a href="#"><img src="../midia_photos/face.png" alt="facebook"></a>
-            <a href="#"><img src="../midia_photos/twiter.webp" alt="twitter"></a>
-            <a href="#"><img src="../midia_photos/insta.webp" alt="insta"></a>
+            <a href="#"><img src="face.png" alt="facebook"></a>
+            <a href="#"><img src="twiter.webp" alt="twitter"></a>
+            <a href="#"><img src="insta.webp" alt="insta"></a>
 
         </div> <!--social-midia-->
 
