--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="sobre">
 
         <div class="extras">
-            <img src="cafe1.png" alt="">
+            <img src="https://artursantana.github.io/Primeiro/cafe1.png" alt="">
         </div ><!--extras-->
 
         <div class="social-midia">
@@ -80,6 +80,6 @@
         </div><!--bola-res-->
     </div>
     
-    <script src="https://artursantana.github.io/Primeiro/js/script.js"></script>
+    <script src="https://artursantana.github.io/Primeiro/script.js"></script>
 </body>
 </html>
