--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         </div><!--bola-res-->
     </div>
     
-    <script src="https://artursantana.github.io/Primeiro/script.js"></script>
+    <script src="https://artursantana.github.io/Primeiro/script.jss"></script>
 </body>
 </html>
